# hibiki-zero

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-package.yml  run-tests.yml
app/components/: CallScreen.tsx  LanguageSelector.tsx
frontend/: README.md  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx  satoshi.css  useAudioProcessor.ts
frontend/components/: WaveformVisualizer.tsx
frontend/public/: audio-output-processor.js
frontend/src/: audio-processor.ts
frontend2/: README.md  pnpm-lock.yaml
frontend2/app/: page.tsx
frontend2/components/: WaveformVisualizer.tsx
hibiki_zero/: __init__.py  client_utils.py  inference.py  run.py  server.py  state.py
inference-server/: README.md
mobile-call-translator/: package.json
telephony-gateway/: README.md
