[project]
name = "hibiki-zero"
requires-python = ">= 3.10,<3.14"
description = "Simultaneous Speech-to-Speech Translation Without Aligned Data."
version = "0.0.1"
readme = "README.md"
dependencies = [
    "moshi @ git+https://git@github.com/kyutai-labs/moshi.git#egg=moshi&subdirectory=moshi",
    "gradio>=5.50.0",
    "jupyter>=1.1.1",
]

[tool.setuptools.dynamic]
version = {attr = "hibiki_zero.__version__"}

[tool.ruff]
line-length = 100

[tool.ruff.format]
line-ending = "lf"
# avoid having a trailing comma changing 
# the behavior of the formatter
skip-magic-trailing-comma = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hibiki_zero"]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
hibiki-zero = "hibiki_zero.run:cli_app"

[tool.uv]
# System python distribution can have header files missing, so we use only the python
# distributions provided by uv which have everything included.
python-preference = "only-managed"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
